--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ android.useAndroidX=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 
+kotlinVersion=1.6.20
 sqlDelightVersion=1.5.3
 koinVersion=3.2.0
 ktorVersion=2.0.1
