--- a/androidAppCompose/src/main/AndroidManifest.xml
+++ b/androidAppCompose/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".ui.App">
+        android:name=".App">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
