Web compose working without cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ kotlinVersion=1.6.20
 sqlDelightVersion=1.5.3
 koinVersion=3.2.0
 ktorVersion=2.0.1
+composeVersion=1.2.0-beta01
+composePluginVersion=1.2.0-alpha01-dev683
