--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ koinVersion=3.2.0
 ktorVersion=2.0.1
 composeVersion=1.2.0-beta01
 composePluginVersion=1.2.0-alpha01-dev683
+coroutinesVersion=1.6.1
