Adding ios-compose

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ android.useAndroidX=true
 
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.stability.nowarn=true
 
 kotlinVersion=1.6.20
 sqlDelightVersion=1.5.3
