--- a/gradle.properties
+++ b/gradle.properties
@@ -10,11 +10,12 @@ android.useAndroidX=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
+kotlin.native.cacheKind=none
 
-kotlinVersion=1.6.20
+kotlinVersion=1.7.10
 sqlDelightVersion=1.5.3
 koinVersion=3.2.0
 ktorVersion=2.0.1
-composeVersion=1.2.0-beta01
-composePluginVersion=1.2.0-alpha01-dev683
+composeVersion=1.3.0-beta01
+composePluginVersion=1.2.0-alpha01-dev774
 coroutinesVersion=1.6.1
